--- a/01-preface.Rmd
+++ b/01-preface.Rmd
@@ -1,9 +1,12 @@
 # Preliminaries on causal mediation analysis {#mediation}
 
-## Motivating studies
+## Motivating study
 
-[TO FILL IN (KARA?). IDEALLY THESE WOULD BE TWO OR THREE EXAMPLES THAT WE CAN
-USE THROUGHOUT THE WORKSHOP FOR ALL EFFECTS]
+Do differences in the effects of treatment (comparing two medications for opioid use disorder, naltrexone vs buprenorphine) on risk of relapse operate through  mediators of adherence, opioid use, pain, and depressive symptoms? [@rudolph2020explaining]
+
+```{r, echo=FALSE, fig.cap="", out.width = '50%'}
+knitr::include_graphics("ctndag.pdf")
+```
 
 ## What is causal mediation analysis?
 
@@ -15,9 +18,8 @@ USE THROUGHOUT THE WORKSHOP FOR ALL EFFECTS]
 
 ### An example of a non-causal mediation analysis (product of coefficients)
 
-- Assume you are interested in the effect of a treatment $A$ ([FILL IN FROM
-  MOTIVATING EXAMPLE]) on an outcome $Y$ ([FILL IN]) through a mediator $M$
-  ([FILL IN])
+- Assume you are interested in the effect of a treatment $A$ (naltrexone vs. buprenorphine) on an outcome $Y$ (risk of relapse) through mediators $M$
+  (adherence, opioid use, pain, depressive symptoms)
 - We could fit the following models:
     \begin{align}
       \E(Y\mid A=a) & = \alpha_0 + \alpha_1 a\\
