--- a/book.bib
+++ b/book.bib
@@ -1,3 +1,11 @@
+@article{rudolph2020explaining,
+  title={Explaining differential effects of medication for opioid use disorder using a novel approach incorporating mediating variables},
+  author={Rudolph, Kara and Diaz, Ivan and Hejazi, Nima and van der Laan, Mark and Luo, Sean and Shulman, Matisyahu and Campbell, Aimee and Rotrosen, John and Nunes, Edward},
+  journal={Addiction},
+  year={2020},
+  publisher={Wiley Online Library}
+}
+
 @book{xie2015,
   title = {Dynamic Documents with {R} and knitr},
   author = {Yihui Xie},
